methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:1: error: method growFlowers overrides nothing
override def growFlowers() {
             ^